<?xml version="1.0"?>
<package format="2">
  <name>blockly_backend</name>
  <version>0.1.0</version>
  <description>A ROS package that simplifies robot interaction using the Blobkly web interfaces</description>

  <maintainer email="afdaniele@ttic.edu">Andrea F. Daniele</maintainer>

  <license>GPLv3</license>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>message_runtime</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
